log_output/manifests/pingpong/stripprefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: exercises
  name: pingpong-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /pingpong
