log_output/manifests/pingpong/db.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: pingpong-db-svc
  labels:
    app: pingpong-postgres
spec:
  ports:
    - port: 5432
      name: web
  clusterIP: None
  selector:
    app: pingpong-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: exercises
  name: pingpong-db-stset
spec:
  serviceName: "pingpong-db-svc"
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-db
  template:
    metadata:
      labels:
        app: pingpong-db
    spec:
      containers:
        - name: postgres
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
