log_output/manifests/pingpong/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: pingpong-svc
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5002
